# RPG_simulation

./: .gitignore  README.md  main.py  manage.py  pyproject.toml
agents/: base_agent.py  base_lore_agent.py  cultures_agent.py  geography_agent.py  history_agent.py  politics_agent.py  user_input_agent.py
agents/prompts/: geography_prompt.py  politics_prompt.py  user_input_prompt.py
core/: consistency_analyzer.py  json_parser.py  orchestrator.py  result_formatter.py  result_formatter_ru.py  world_context.py
generator/: urls.py  views.py
generator/static/css/: style.css
generator/templates/generator/: base.html  index.html  result.html
llm/: base_llm_client.py  openai_client.py
loreforge/: asgi.py  settings.py  urls.py  wsgi.py
prompts/: base_lore_prompt.py  consistency_prompt.py  cultures_prompt.py  history_prompt.py
