[project]
name = "rpg-simulaton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "dataclasses>=0.8",
    "dotenv>=0.9.9",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "typing>=3.10.0.0",
]
